--- a/website/vitals.html
+++ b/website/vitals.html
@@ -10,31 +10,49 @@
 <body>
 	<header> 
 		<div id="backsplash">
-			<img src="logo.png" alt="Telemed" id="telemed">
+			<img src="logo.png" alt="Home" id="telemed">
 		</div>
-		<h1> New User </h1>
+		<a href="main_menu.html">
+			<img src="house.png" alt="Telemed" id="home_icon">
+		</a>
+		<h1> Live Consultation </h1>
 	</header>
 	
-	
-	<div class="container_1">
-		<label><b>Username:</b></label><br/>
-		<label><b>Password:</b></label><br/>
-		<label><b>Email:</b></label><br/>
-		<label><b>Phone:</b></label><br/>
-		<label><b>Password:</b></label><br/>
-		<label><b>Retype Password:</b></label><br/>
+	<div class="vitals-page">
+		<div class="left-vitals">
+			<h2> Vitals </h2><br/>
+			<div class="container_1">
+				<div id="vitals-record">Pulse:</div>
+				<div id="vitals-record">Oximeter:</div>
+				<div id="vitals-record">Blood Pressure:</div>
+				<div id="vitals-record">Temperature:</div>
+				<div id="vitals-record">Height:</div>
+				<div id="vitals-record">Weight:</div>
+				<div id="vitals-record">Throat/Ears:</div>
+			</div>
+			
+			<div class="container_2">
+				<input id="current" type="text" name="fname" required>
+				<button type="submit" id="collect">Measure</button>
+				<input id="current" type="text" name="lname" required>
+				<button type="submit" id="collect">Measure</button>
+				<input id="current" type="text" name="email" required>
+				<button type="submit" id="collect">Measure</button>
+				<input id="current" type="text" name="phone" required>
+				<button type="submit" id="collect">Measure</button>
+				<input id="current" type="password" name="psw" required>
+				<button type="submit" id="collect">Measure</button>
+				<input id="current" type="password" name="psw" required>
+				<button type="submit" id="collect">Measure</button>
+				<button type="submit" id="collect_endo">Measure</button>
+			</div>
+		</div>
+		<div class= "right-vitals">
+			<iframe width="600" height="450" src="https://www.youtube.com/embed/YG2p6XBuSKA"></iframe>
+		</div>
+			
 	</div>
 	
-	<div class="container_2">
-		<input type="text" placeholder="Enter First Name" name="fname" required>
-		<button type="submit" id="collect">Get Started</button>
-		<input type="text" placeholder="Enter Last Name" name="lname" required>
-		<input type="text" placeholder="Enter Email" name="email" required>
-		<input type="text" placeholder="Enter Phone Number" name="phone" required>
-		<input type="password" placeholder="Enter Password" name="psw" required>
-		<input type="password" placeholder="Enter Password" name="psw" required>
-	</div>
-
 	<footer>	
 	</footer>
 </body>
