Added back buttons to all the pages so you don't need to refresh. Also classified all the back buttons under the 'back_btn' class for no redundancies.

--- a/medApp/index.html
+++ b/medApp/index.html
@@ -209,6 +209,11 @@
 			</div>
 			<h1> FAQ </h1>
 		</header>
+
+		<button id="chatBack_btn" type="button" class="btn btn-default back_btn" style="width: 33.3%;">
+			<span class="glyphicon glyphicon-arrow-left"></span>  Back
+		</button>
+		
 	</div>
 
 
@@ -224,6 +229,11 @@
 			</div>
 			<h1> Record Vitals </h1>
 		</header>
+
+		<button id="chatBack_btn" type="button" class="btn btn-default back_btn" style="width: 33.3%;">
+			<span class="glyphicon glyphicon-arrow-left"></span>  Back
+		</button>
+
 	</div>
 
 
@@ -240,6 +250,11 @@
 			</div>
 			<h1> Medical History </h1>
 		</header>
+
+		<button id="chatBack_btn" type="button" class="btn btn-default back_btn" style="width: 33.3%;">
+			<span class="glyphicon glyphicon-arrow-left"></span>  Back
+		</button>
+
 	</div>
 
 
@@ -270,7 +285,7 @@
 							<button class="btn btn-default" type="button" id="clear" style="width: 33.3%">
 								<span class="glyphicon glyphicon-remove-circle"></span>  Clear Chat History
 							</button>
-							<button id="chatBack_btn" type="button" class="btn btn-default" style="width: 33.3%;">
+							<button id="chatBack_btn" type="button" class="btn btn-default back_btn" style="width: 33.3%;">
 								<span class="glyphicon glyphicon-arrow-left"></span>  Back
 							</button>
 						</div>
