Added logout feature. Works fine, allowing for user to log out and log in as many times and to any accounts without ever refreshing the page

--- a/medApp/index.html
+++ b/medApp/index.html
@@ -117,7 +117,9 @@
 					<label><b>Password</b></label>
 					<input id="password" type="password" placeholder="Enter Password" name="psw" required>
 
-					<button style="margin: 5px; width:100%;" type="button" id="login_btn"> Login </button>
+					<button style="margin: 5px; width:100%;" type="button" id="login_btn"> 
+						<span class="glyphicon glyphicon-log-in"></span>   Login 
+					</button>
 					<button style="margin: 5px; width:100%;" type="button" id="register_btn"> Register </button>
 
 					<input type="checkbox" checked="checked"> Remember Me
@@ -189,7 +191,11 @@
 			<div id="backsplash">
 				<img src="/images/Logo.PNG" alt="Telemed" id="telemed">
 			</div>
-			<h1> Home </h1>
+			<h1> Home 
+				<button id="logout_btn" type="button" class="btn btn-default" style="width: 33.3%;">
+					<span class="glyphicon glyphicon-log-out"></span>  Logout
+				</button>
+			</h1>
 		</header>
 		<div class="row">
 				<form action="#">
@@ -275,7 +281,7 @@
 		<div class="row">
 
 			<!-- CONTENT / FRONT END HTML GOES HERE -->
-			
+
 		</div>
 	</div>
 
