Adding https part

--- a/medApp/index.html
+++ b/medApp/index.html
@@ -268,8 +268,7 @@
 
 			<!-- CONTENT / FRONT END HTML GOES HERE -->
 
-			<div id="otEmbedContainer" style="width:800px; height:640px"></div>
-			<script src="https://tokbox.com/embed/embed/ot-embed.js?embedId=f101251b-7ef7-4071-b365-3a2371365fd5"></script>
+			<script src = "recordVitals.js"></script>
 
 		</div>
 	</div>
