Adding vitals page to index

--- a/medApp/index.html
+++ b/medApp/index.html
@@ -268,6 +268,41 @@
 
 			<!-- CONTENT / FRONT END HTML GOES HERE -->
 
+			<div class="vitals-page">
+				<div class="left-vitals">
+					<h2> Vitals </h2><br/>
+					<div class="container_1">
+						<div id="vitals-record">Pulse:</div>
+						<div id="vitals-record">Oximeter:</div>
+						<div id="vitals-record">Blood Pressure:</div>
+						<div id="vitals-record">Temperature:</div>
+						<div id="vitals-record">Height:</div>
+						<div id="vitals-record">Weight:</div>
+						<div id="vitals-record">Throat/Ears:</div>
+					</div>
+					
+					<div class="container_2">
+						<input id="current" type="text" name="fname" required>
+						<button type="submit" id="collect">Measure</button>
+						<input id="current" type="text" name="lname" required>
+						<button type="submit" id="collect">Measure</button>
+						<input id="current" type="text" name="email" required>
+						<button type="submit" id="collect">Measure</button>
+						<input id="current" type="text" name="phone" required>
+						<button type="submit" id="collect">Measure</button>
+						<input id="current" type="password" name="psw" required>
+						<button type="submit" id="collect">Measure</button>
+						<input id="current" type="password" name="psw" required>
+						<button type="submit" id="collect">Measure</button>
+						<button type="submit" id="collect_endo">Measure</button>
+					</div>
+				</div>
+				<div class= "right-vitals">
+					<iframe width="600" height="450" src="https://www.youtube.com/embed/YG2p6XBuSKA"></iframe>
+				</div>
+					
+			</div>
+
 			<script src = "recordVitals.js"></script>
 
 		</div>
@@ -294,6 +329,8 @@
 		<div class="row">
 
 			<!-- CONTENT / FRONT END HTML GOES HERE -->
+
+			
 
 		</div>
 	</div>
