--- a/medApp/index.html
+++ b/medApp/index.html
@@ -270,31 +270,42 @@
 
 			<div class="vitals-page">
 				<div class="left-vitals">
-					<h2> Vitals </h2><br/>
 					<div class="container_1">
-						<div id="vitals-record">Pulse:</div>
-						<div id="vitals-record">Oximeter:</div>
-						<div id="vitals-record">Blood Pressure:</div>
-						<div id="vitals-record">Temperature:</div>
-						<div id="vitals-record">Height:</div>
-						<div id="vitals-record">Weight:</div>
-						<div id="vitals-record">Throat/Ears:</div>
+						<div id="vitals-record" class="form-inline">
+							<div class="form-group">
+								Pulse:
+								<button id="collect_sc" class="collect" type="submit">Measure</button>
+								<h3 id="sc_result"> Your Weight (lb's)</h3>
+							</div>
+						</div>
+						<div id="vitals-record">Oximeter:
+							<button type="submit" class="collect">Measure</button>
+							<h3 id="sc_result"> Your Weight (lb's)</h3>
+						</div>
+						<div id="vitals-record">Blood Pressure:
+							<button type="submit" class="collect">Measure</button>
+							<h3 id="sc_result"> Your Weight (lb's)</h3>
+						</div>
+						<div id="vitals-record">Temperature:
+							<button type="submit" class="collect">Measure</button>
+							<h3 id="sc_result"> Your Weight (lb's)</h3>
+						</div>
+						<div id="vitals-record">Height:
+							<button type="submit" class="collect">Measure</button>
+							<h3 id="sc_result"> Your Weight (lb's)</h3>
+						</div>
+						<div id="vitals-record">Weight:
+							<button type="submit" class="collect">Measure</button>
+							<h3 id="sc_result"> Your Weight (lb's)</h3>
+						</div>
+						<div id="vitals-record">Throat/Ears:
+							<button type="submit" id="collect_endo">Measure</button>
+						</div>
 					</div>
 					
 					<div class="container_2">
-						<input id="current" type="text" name="fname" required>
-						<button type="submit" id="collect">Measure</button>
-						<input id="current" type="text" name="lname" required>
-						<button type="submit" id="collect">Measure</button>
-						<input id="current" type="text" name="email" required>
-						<button type="submit" id="collect">Measure</button>
-						<input id="current" type="text" name="phone" required>
-						<button type="submit" id="collect">Measure</button>
-						<input id="current" type="password" name="psw" required>
-						<button type="submit" id="collect">Measure</button>
-						<input id="current" type="password" name="psw" required>
-						<button type="submit" id="collect">Measure</button>
-						<button type="submit" id="collect_endo">Measure</button>
+
+						
 					</div>
 				</div>
 				<div class= "right-vitals">
