Added some corrections to vitals page. Included funcitonality on the server and jvascript to handle function calls to the EL 10 for sending and recieving data from the sensors. Some additional css changes will need to be made for aesthetics but generally everything works fine

--- a/medApp/index.html
+++ b/medApp/index.html
@@ -271,35 +271,28 @@
 			<div class="vitals-page">
 				<div class="left-vitals">
 					<div class="container_1">
-						<div id="vitals-record" class="form-inline">
-							<div class="form-group">
-								Pulse:
-								<button id="collect_sc" class="collect" type="submit">Measure</button>
-								<h3 id="sc_result"> Your Weight (lb's)</h3>
-							</div>
+						<div id="vitals-record">Blood Pressure:
+							<button id="collect_bp" type="submit" class="collect">Measure</button>
+							<h3 id="bp_result"> Your Blood Pressure (mmhg)</h3>
 						</div>
 						<div id="vitals-record">Oximeter:
-							<button type="submit" class="collect">Measure</button>
-							<h3 id="sc_result"> Your Weight (lb's)</h3>
-						</div>
-						<div id="vitals-record">Blood Pressure:
-							<button type="submit" class="collect">Measure</button>
-							<h3 id="sc_result"> Your Weight (lb's)</h3>
+							<button id="collect_oxi" type="submit" class="collect">Measure</button>
+							<h3 id="oxi_result"> Your Blood Oxygen Saturation</h3>
 						</div>
 						<div id="vitals-record">Temperature:
-							<button type="submit" class="collect">Measure</button>
-							<h3 id="sc_result"> Your Weight (lb's)</h3>
+							<button id="collect_temp" type="submit" class="collect">Measure</button>
+							<h3 id="temp_result"> Your Temperature (f)</h3>
 						</div>
 						<div id="vitals-record">Height:
-							<button type="submit" class="collect">Measure</button>
-							<h3 id="sc_result"> Your Weight (lb's)</h3>
+							<button id="collect_ht" type="submit" class="collect">Measure</button>
+							<h3 id="ht_result"> Your Height</h3>
 						</div>
 						<div id="vitals-record">Weight:
-							<button type="submit" class="collect">Measure</button>
+							<button id="collect_sc" type="submit" class="collect">Measure</button>
 							<h3 id="sc_result"> Your Weight (lb's)</h3>
 						</div>
 						<div id="vitals-record">Throat/Ears:
-							<button type="submit" id="collect_endo">Measure</button>
+							<button type="submit" id="collect_endo">Enable Endoscope</button>
 						</div>
 					</div>
 					
