Added history page and history part to  mongo db. Working 100% and ready for sensors to be added to it from daemon process

--- a/medApp/index.html
+++ b/medApp/index.html
@@ -258,7 +258,7 @@
 				<img src="/images/Logo.PNG" alt="Telemed" id="telemed">
 			</div>
 			<h1> Record Vitals 
-				<button id="chatBack_btn" type="button" class="btn btn-default back_btn" style="width: 33.3%;">
+				<button id="recordBack_btn" type="button" class="btn btn-default back_btn" style="width: 33.3%;">
 					<span class="glyphicon glyphicon-arrow-left"></span>  Back
 				</button>
 			</h1>
@@ -333,7 +333,7 @@
 		<div class="row">
 
 			<!-- CONTENT / FRONT END HTML GOES HERE -->
-
+			<div id="history"></div>
 			
 
 		</div>
