Worked with daniel to get sensor data being recorded and shown on app pages. Works great except for ECG.

--- a/medApp/index.html
+++ b/medApp/index.html
@@ -358,9 +358,9 @@
 							<button id="collect_temp" type="submit" class="collect">Measure</button>
 							<h3 id="temp_result"> Your Temperature (f)</h3>
 						</div>
-						<div id="vitals-record">Height:
-							<button id="collect_ht" type="submit" class="collect">Measure</button>
-							<h3 id="ht_result"> Your Height</h3>
+						<div id="vitals-record">ECG:
+							<button id="collect_ecg" type="submit" class="collect">Measure</button>
+							<h3 id="ecg_result"> Your ECG</h3>
 						</div>
 						<div id="vitals-record">Weight:
 							<button id="collect_sc" type="submit" class="collect">Measure</button>
