Forgot a bracket in a div

--- a/medApp/index.html
+++ b/medApp/index.html
@@ -357,7 +357,7 @@
 						<div id="vitals-record">Temperature:
 							<button id="collect_temp" type="submit" class="collect">Measure</button>
 							<div class="well" id="temp_result"> Your Temperature (f)</div>
-						</div
+						</div>
               
 						<div id="vitals-record">ECG:
 							<button id="collect_ecg" type="submit" class="collect">Measure</button>
@@ -368,6 +368,7 @@
 							<button id="collect_sc" type="submit" class="collect">Measure</button>
 							<div class="well" id="sc_result"> Your Weight (lb's)</div>
 						</div>
+
 						<div id="vitals-record">Throat/Ears:
 							<button type="submit" id="collect_endo">Enable Endoscope</button>
 						</div>
