Fixed back button id for recording

--- a/medApp/index.html
+++ b/medApp/index.html
@@ -333,7 +333,7 @@
 				<img src="/images/Logo.PNG" alt="Telemed" id="telemed">
 			</div>
 			<h1> Record Vitals 
-				<button id="chatBack_btn" type="button" class="btn btn-default back_btn" style="width: 10%; float: left; margin-right: 25px;">
+				<button id="recordBack_btn" type="button" class="btn btn-default back_btn" style="width: 10%; float: left; margin-right: 25px;">
 					<span class="glyphicon glyphicon-arrow-left"></span>  Back
 				</button>
 			</h1>
@@ -381,7 +381,6 @@
 					<div id = "remote_media"></div>
 					<div id = "client_cameras">
 						<div id = "local_media" ></div>
-					
 						<div id = "endoscope_view"></div>
 					</div>
 					<button id="enable-chat" type="submit" class=:collect> Connect to a Doctor</button>
