--- a/medApp/index.html
+++ b/medApp/index.html
@@ -20,7 +20,7 @@
 
 	<!-- Latest compiled JavaScript 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
-	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+	<script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
 	<style>
 
@@ -378,12 +378,12 @@
 					</div>
 				</div>
 				<div class="right-vitals">
+					<button id="enable-chat" type="submit" class=:collect> Connect to a Doctor</button>
 					<div id = "remote_media"></div>
 					<div id = "client_cameras">
 						<div id = "local_media" ></div>
 						<div id = "endoscope_view"></div>
 					</div>
-					<button id="enable-chat" type="submit" class=:collect> Connect to a Doctor</button>
 				</div>
 				
 					
